--- a/index.html
+++ b/index.html
@@ -493,17 +493,17 @@
                     <div class="row">
                         <!-- footer logo -->
                         <div class="col-md-12 col-sm-12 text-center">
-                            <div class="text-center"><a class="inner-link" href="#home"><img src="images/logo-personal-footer.png" alt=""/></a></div>
+                            <div class="text-center"><a class="inner-link" href="#home"></a></div>
                             <span class="text-small alt-font text-uppercase margin-two margin-lr-auto display-block letter-spacing-1 black-text">Juan Felipe Chaquea Borrero. Personal Portfolio</span>
                         </div>
                         <!-- end footer logo -->
                         <!-- social media link -->
                         <div class="col-md-12 col-sm-12 text-center margin-four no-margin-lr no-margin-bottom xs-margin-fifteen xs-no-margin-lr xs-no-margin-bottom">
                             <div class="footer-social">
-                                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
-                                <a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube"></i></a>
-                                <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                                <a href="https://www.behance.com/" target="_blank"><i class="fa fa-behance"></i></a>
+                            
+                                <a href="https://www.youtube.com/channel/UClnFJD0MbtN4IdaYasxqI9A?view_as=subscriber" target="_blank"><i class="fa fa-youtube"></i></a>
+                                <a href="https://www.linkedin.com/in/juan-felipe-chaquea-1a2244139/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                <a href="https://www.behance.net/jfchaquea1021" target="_blank"><i class="fa fa-behance"></i></a>
                             </div>
                         </div>
                         <!-- end social media link -->
