--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     </div>
                     <!-- end text -->
                     <div class="col-md-7 col-sm-12 margin-nine no-margin-bottom no-margin-lr">
-                        <form id="agencycontactform" action="javascript:void(0)" method="post">
+                        <form id="agencycontactform" action="email-templates/personal-contact.php" method="post">
                             <div id="success" class="no-margin-lr"></div>
                             <!-- input -->
                             <input type="text" name="name" id="name" placeholder="* YOUR NAME" class="big-input alt-font">
