--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
                         <div class="margin-thirteen no-margin-lr sm-margin-nine sm-no-margin-tb sm-no-margin-left sm-display-inline-table xs-margin-nine xs-no-margin-lr xs-no-margin-top xs-width-100">
                             <span class="text-uppercase alt-font black-text">General Enquiries</span>
-                            <p class="text-medium"><a href="mailto:sales@domain.com" class="gray-text">designchaks@gmail.com</a></p>
+                            <p class="text-medium"><a href="mailto:designchaks@gmail.com" class="gray-text">designchaks@gmail.com</a></p>
                         </div>
                         <div class="margin-six no-margin-lr sm-margin-nine sm-no-margin-tb sm-no-margin-left sm-display-inline-table xs-margin-nine xs-no-margin-lr xs-no-margin-top xs-width-100">
                             <span class="text-uppercase alt-font black-text">Call me</span>
@@ -454,7 +454,7 @@
                     </div>
                     <!-- end text -->
                     <div class="col-md-7 col-sm-12 margin-nine no-margin-bottom no-margin-lr">
-                        <form id="agencycontactform" action="email-templates/personal-contact.php" method="post">
+                        <form id="agencycontactform" action="email-templates/agency-contact.php" method="post">
                             <div id="success" class="no-margin-lr"></div>
                             <!-- input -->
                             <input type="text" name="name" id="name" placeholder="* YOUR NAME" class="big-input alt-font">
