--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     </div>
                     <!-- end text -->
                     <div class="col-md-7 col-sm-12 margin-nine no-margin-bottom no-margin-lr">
-                        <form action="http://formspree.io/designchaks@gmail.com" method="post">
+                        <form action="http://formspree.io/designchaks@gmail.com" method="POST">
                             <div id="success" class="no-margin-lr"></div>
                             <!-- input -->
                             <input type="text" name="name" id="name" placeholder="* YOUR NAME" class="big-input alt-font">
