--- a/index.html
+++ b/index.html
@@ -454,6 +454,11 @@
                     </div>
                     <!-- end text -->
                     <div class="col-md-7 col-sm-12 margin-nine no-margin-bottom no-margin-lr">
+                        <form method="POST" action="http://formspree.io/designchaks@gmail.com">
+  <input type="email" name="email" placeholder="Your email">
+  <textarea name="message" placeholder="Your message"></textarea>
+  <button type="submit">Send</button>
+</form>
                         <form action="http://formspree.io/designchaks@gmail.com" method="POST">
                             <div id="success" class="no-margin-lr"></div>
                             <!-- input -->
