--- a/index.html
+++ b/index.html
@@ -454,18 +454,13 @@
                     </div>
                     <!-- end text -->
                     <div class="col-md-7 col-sm-12 margin-nine no-margin-bottom no-margin-lr">
-                        <form method="POST" action="http://formspree.io/designchaks@gmail.com">
-  <input type="email" name="email" placeholder="Your email">
-  <textarea name="message" placeholder="Your message"></textarea>
-  <button type="submit">Send</button>
-</form>
-                        <form action="http://formspree.io/designchaks@gmail.com" method="POST">
+                      <form id="agencycontactform" action="email-templates/agency-contact.php" method="post">
                             <div id="success" class="no-margin-lr"></div>
                             <!-- input -->
                             <input type="text" name="name" id="name" placeholder="* YOUR NAME" class="big-input alt-font">
                             <!-- end input -->
                             <!-- input  -->
-                            <input type="email" name="_replyto" id="email" placeholder="* YOUR EMAIL" class="big-input alt-font">
+                            <input type="text" name="email" id="email" placeholder="* YOUR EMAIL" class="big-input alt-font">
                             <!-- end input -->
                             <!-- dropdown  -->
                             <div class="select-style big-select alt-font">
@@ -480,10 +475,9 @@
                             </div>
                             <!-- end dropdown  -->
                             <!-- textarea  -->
-                            <textarea name="body" id="comment" placeholder="YOUR MESSAGE" class="big-input alt-font"></textarea>
+                            <textarea name="comment" id="comment" placeholder="YOUR MESSAGE" class="big-input alt-font"></textarea>
                             <!-- end textarea  -->
                             <!-- button  -->
-                            <input type="submit" value="Send">
                             <button id="agency-contact-button" type="submit" class="highlight-button-dark btn btn-medium">Submit</button>
                             <!-- end button  -->
                         </form>
